--- a/config.json
+++ b/config.json
@@ -4,113 +4,8 @@
     "height": 320,
     "foreground": "#FFFFFF",
     "background": "#181425",
-    "title": "Cartomancer"
+    "title": "Parcel Example"
   },
-  "cards": [
-    {
-      "id": "sword",
-      "name": "Sword",
-      "description": "This mighty blade will make you more lethal. \n\nGain +1 ATK for 3 turns.",
-      "tint": 17,
-      "image": "res/img/cards/sword.png",
-      "action": "applyModifier",
-      "target": "self",
-      "params": {
-        "id": "sword",
-        "add": { "atk": 1 },
-        "duration": 3,
-        "positive": true,
-        "responsible": "source"
-      }
-    },
-    {
-      "id": "shadow",
-      "name": "Shadow",
-      "image": "res/img/cards/dark.png",
-      "action": "applyModifier",
-      "description": "Harness the darkness to disorient your foes. \n\nTarget gets -1 ATK and -1 DEF for 2 turns.",
-      "tint": 25,
-      "action": "applyModifier",
-      "params": {
-        "range": 2,
-        "id": "shadow",
-        "add": { "def": -1, "atk": -1 },
-        "duration": 2,
-        "responsible": "target"
-      },
-      "target": "creature"
-    },
-    {
-      "id": "fire",
-      "image": "res/img/cards/fire.png",
-      "name": "Fire",
-      "description": "Launch a ball of flame to vanquish the enemy in your path. \n\nSummons a Fireball which will travel in a direction until it hits something.",
-      "tint": 7,
-      "action": "spawn",
-      "target": "space",
-      "params": {
-        "range": 1,
-        "id": "fireball",
-        "stats": {
-          "atk": 2
-        }
-      }
-    },
-    {
-      "id": "shield",
-      "name": "Shield",
-      "description": "Few can penetrate this shield's legendary protection. \n\nGain +1 DEF for 3 turns.",
-      "image": "res/img/cards/shield.png",
-      "tint": 17,
-      "action": "applyModifier",
-      "target": "self",
-      "params": {
-        "id": "shield",
-        "add": { "def": 1 },
-        "duration": 3,
-        "positive": true,
-        "responsible": "source"
-      }
-    },
-    {
-      "id": "thunder",
-      "name": "Thunder",
-      "image": "res/img/cards/thunder.png",
-      "description": "A bolt of lightning destroys your enemies. \n\nDeals 3 damage to a target.",
-      "tint": 7,
-      "action": "attack",
-      "target": "creature",
-      "params": {
-        "range": 3,
-        "kind": "lightning",
-        "base": 3
-      }
-    },
-    {
-      "id": "light",
-      "name": "Light",
-      "enabled": false,
-      "tint": 25
-    },
-    {
-      "id": "water",
-      "enabled": false,
-      "name": "Water",
-      "tint": 25
-    },
-    {
-      "id": "wind",
-      "name": "Wind",
-      "enabled": false,
-      "tint": 25
-    },
-    {
-      "id": "earth",
-      "enabled": false,
-      "name": "Earth",
-      "tint": 25
-    }
-  ],
   "entities": [
     {
       "id": "sword",
